--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -119,6 +119,7 @@
   "devDependencies": {
     "@dagrejs/dagre": "1.1.4",
     "@likec4/tsconfig": "workspace:*",
+    "@mantine/core": "catalog:mantine",
     "@mantine/colors-generator": "catalog:mantine",
     "@types/extend": "3.0.4",
     "@types/hast": "3.0.4",
